@@ -21,4 +21,6 @@
 - ~rustic-recompile~ will remember any universal arguments that is
   passed to it.
 - Fix ~rustic-cargo-upgrade~ in the presence of universal arguments.
-- Fix ~rusti-cargo-clippy-rerun~ to use the last used arguments.
+- Fix ~rustic-cargo-clippy-rerun~ to use the last used arguments.
+- Implement ~rustic-babel-display-error-popup~ customization
+  option. Refer the variable docs for more details.
